--- a/Admin/index.html
+++ b/Admin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>学IT - 后台管理系统</title>
+    <title>仓库信息管理系统</title>
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./assets/nprogress/nprogress.css">
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <a href="./user_list.html">
-                        <i class="fa fa-bell"></i>
+                        <i class="fa fa-user-o"></i>
                         用户管理
                     </a>
                 </li>
@@ -72,7 +72,7 @@
                 </li>
                 <li>
                     <a href="./advert_list.html">
-                        <i class="fa fa-bell"></i>
+                        <i class="fa fa-sellsy"></i>
                         广告管理
                     </a>
                 </li>
